--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Pods/Pods.xcodeproj/xcuserdata/itaydressler.xcuserdatad
 React.xcodeproj/xcuserdata
 React.xcworkspace/xcshareddata
 Pods
+React.xcworkspace/xcuserdata
